--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">BitmapLoadingAndCaching</string>
     <string name="image">Image</string>
     <string name="search_contacts">Search Contacts</string>
+    <string name="add_contact">Add Contact</string>
 </resources>
